# regex-charclass

./: Cargo.toml  README.md  generate-classes.sh
benches/: my_benchmark.rs
src/: char.rs  lib.rs
src/tokens/: mod.rs
src/tokens/unicode/: general_category.rs  mod.rs  perl_decimal.rs  perl_space.rs  perl_word.rs  property_bool.rs  script.rs
