[package]
name = "regex-charclass"
version = "1.0.0"
edition = "2021"
authors = ["Alexandre van Beurden"]
repository = "https://github.com/alexvbrdn/regex-charclass"
license = "MIT"
keywords = [
    "regex",
    "intersection",
    "union",
    "difference",
    "complement",
]
description = "Manipulate and convert regex character classes."
readme = "README.md"

[dependencies]
once_cell = "1.19.0"
irange = "1.1.2"
ahash = "0.8.11"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde_json = "1.0"

[features]
default = ["serde"]
serde = ["irange/serde", "dep:serde"]

[[bench]]
name = "my_benchmark"
harness = false