[package]
name = "regex-charclass"
version = "1.0.3"
edition = "2021"
authors = ["Alexandre van Beurden"]
repository = "https://github.com/alexvbrdn/regex-charclass"
license = "MIT"
keywords = ["regex", "intersection", "union", "difference", "complement"]
description = "Manipulate and convert regex character classes."
readme = "README.md"

[dependencies]
once_cell = "1.19.0"
irange = "1.1.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[features]
serde = ["irange/serde", "dep:serde"]

[[bench]]
name = "my_benchmark"
harness = false
